Fix submit btn position and input-wrap padding

--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-@import url('./assets/fonts/Poppins-Bold.ttf');
-@import url('./assets/fonts/Poppins-BoldItalic.ttf');
-@import url('./assets/fonts/Poppins-ExtraBold.ttf');
-@import url('./assets/fonts/Poppins-ExtraBoldItalic.ttf');
-@import url('./assets/fonts/Poppins-Italic.ttf');
-@import url('./assets/fonts/Poppins-Regular.ttf');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 :root {
     --Purple: hsl(259, 100%, 65%);
@@ -47,13 +43,14 @@ main {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    padding-bottom: 60px;
+    padding-bottom: 10px;
     border-bottom: 1px solid var(--Light-grey);
     margin-bottom: 50px;
 }
 
 .input-container {
     width: 30%;
+
     & label {
         color: var(--Smokey-grey);
         font-weight: bold;
@@ -92,7 +89,7 @@ main {
     margin: 0 auto;
     left: 0;
     right: 0;
-    top: 135px;
+    top: 130px;
     border: none;
     z-index: 2;
     cursor: pointer;
@@ -107,10 +104,12 @@ main {
 }
 
 p {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 900;
+
     & span {
         color: var(--Purple);
+
         &.fade-in-text {
             animation: fadeIn 5s;
         }
@@ -123,8 +122,13 @@ p {
 }
 
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 @media (min-width: 900px) {
@@ -138,18 +142,31 @@ p {
         height: 600PX;
     }
 
-    .attribution {
-        position: absolute;
-        bottom: 0;
-    }
 
     .btn-submit {
-        top: 120px;
+        top: 90px;
         right: -80%;
+    }
+
+    .inputs-wrap {
+        padding-right: 30%;
     }
 
     .input-container span {
         text-align: start;
         margin-top: 5px;
-    } 
+    }
+
+    .input-container input {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 4.2rem;
+    }
+
+    .attribution {
+        position: absolute;
+        bottom: 0;
+    }
 }
